@@ -46,8 +46,8 @@ static const char *text[] = {
 	"",
 	"Darin Adler",
 	"Arturo Espinosa Aldama",
-	"H\xC3\xA9" "ctor Garc\xC3\xAD" "a Alvarez",
-	"Jesus Bravo Alvarez",
+	"H\xC3\xA9" "ctor Garc\xC3\xAD" "a \xC3\x81" "lvarez",
+	"Jes\xC3\xBA" "s Bravo \xC3\x81" "lvarez",
 	"Seth Alves",
 	"Marius Andreiana",
 	"Sean Atkinson",
@@ -83,6 +83,7 @@ static const char *text[] = {
 	"Edd Dumbill",
 	"Larry Ewing",
 	"Gilbert Fang",
+	"Francisco Javier F. Serrador",
 	"Nuno Ferreira",
 	"Valek Filippov",
 	"Nat Friedman",
@@ -91,6 +92,7 @@ static const char *text[] = {
 	"Nike Gerdts",
 	"Grzegorz Goawski",
 	"Jody Goldberg",
+	"Pablo Gonzalo del Campo",
 	"Mark Gordon",
 	"Kenny Graunke",
 	"Alex Graveley",
@@ -123,6 +125,7 @@ static const char *text[] = {
 	"Tuomas Kuosmanen",
 	"Mathieu Lacage",
 	"Christopher J. Lahey",
+	"Eneko Lacunza",
 	"Miles Lane",
 	"Jason Leach",
 	"Elliot Lee",
@@ -151,6 +154,7 @@ static const char *text[] = {
 	"Yukihiro Nakai",
 	"Martin Norb\xC3\xA4" "ck",
 	"Tomas Ogren",
+	"Ismael Olea",
 	"Eskil Heyn Olsen",
 	"Sergey Panov",
 	"Gediminas Paulauskas",
